package com.minacontrol;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class MinaControlApiApplication {

    public static void main(String[] args) {
        SpringApplication.run(MinaControlApiApplication.class, args);
    }

}
